fixed sonar errors